# plane_segmentation_pointnet2

./: README.md  cupy.yml
plane_seg/: CMakeLists.txt
plane_seg/include/plane_seg/: BlockFitter.hpp  Fitting.hpp  IncrementalPlaneEstimator.hpp  PlaneFitter.hpp  PlaneSegmenter.hpp  Preprocessing.hpp  RansacGeneric.hpp  Types.hpp
plane_seg/src/: BlockFitter.cpp  Fitting.cpp  IncrementalPlaneEstimator.cpp  PlaneFitter.cpp  PlaneSegmenter.cpp  Preprocessing.cpp  RectangleFitter.cpp
plane_seg_ros/: CMakeLists.txt  package.xml
plane_seg_ros/config/: plane_seg.rviz
plane_seg_ros/data/realdata/: scene1_12.pcd  scene3_15.pcd  scene8_4.pcd  steps_2.pcd  terrain_0.pcd  testscene25_19.pcd
plane_seg_ros/include/plane_seg_ros/: plane_seg_ros.hpp
plane_seg_ros/launch/: cw_test1.launch  cw_test2.launch  cw_test3.launch  test.launch
plane_seg_ros/src/: plane_seg_ros_n1.cpp  plane_seg_ros_n3.cpp  plane_seg_rospy.py
